refactor(chess): update ChessMatch and related classes to use mainBoard and improve method naming