@@ -13,49 +13,39 @@ import java.util.stream.Collectors;
 
 public class ChessMatch {
 
+  private final Board mainBoard;
+
   @Getter
   private int turn;
   @Getter
   private Color currentPlayer;
-
-  private Board board;
-
   @Getter
   private boolean check;
-
+  @Getter
   private boolean checkMate;
-
   @Getter
   private ChessPiece enPassantVulnerable;
-
   @Getter
   private ChessPiece promoted;
 
-  private List<Piece> piecesOnTheBoard = new ArrayList<>();
+  private final List<Piece> piecesOnTheBoard = new ArrayList<>();
 
-  private List<Piece> capturedPieces = new ArrayList<>();
+  private final List<Piece> capturedPieces = new ArrayList<>();
 
 
   public ChessMatch() {
-    this.board = new Board(8, 8);
+    this.mainBoard = new Board(8, 8);
     turn = 1;
     currentPlayer = Color.WHITE;
     initialSetup();
   }
 
-  public boolean getCheck() {
-    return check;
-  }
-
-  public boolean getCheckMate() {
-    return checkMate;
-  }
 
   public ChessPiece[][] getPieces() {
-    ChessPiece[][] mat = new ChessPiece[board.getRows()][board.getColumns()];
-    for (int i=0; i<board.getRows(); i++) {
-      for (int j=0; j<board.getColumns(); j++) {
-        mat[i][j] = (ChessPiece) board.getSquareFromPieces(i, j);
+    ChessPiece[][] mat = new ChessPiece[mainBoard.getRows()][mainBoard.getColumns()];
+    for (int i = 0; i< mainBoard.getRows(); i++) {
+      for (int j = 0; j< mainBoard.getColumns(); j++) {
+        mat[i][j] = (ChessPiece) mainBoard.getSquareFromPieces(i, j);
       }
     }
     return mat;
@@ -64,7 +54,7 @@ public class ChessMatch {
   public boolean[][] possibleMoves(ChessPosition sourcePosition) {
     Position position = sourcePosition.toPosition();
     validateSourcePosition(position);
-    return board.getSquareFromPieces(position).possibleMoves();
+    return mainBoard.getSquareFromPieces(position).possibleMoves();
   }
 
   public ChessPiece performChessMove(ChessPosition sourcePosition, ChessPosition targetPosition) {
@@ -77,18 +67,18 @@ public class ChessMatch {
       undoMove(source, target, capturedPiece);
       throw new ChessException("You can't put yourself in check");
     }
-    ChessPiece movedPiece = (ChessPiece) board.getSquareFromPieces(target);
+    ChessPiece movedPiece = (ChessPiece) mainBoard.getSquareFromPieces(target);
 
     // move promotion
     promoted = null;
     if (movedPiece instanceof Pawn) {
       if ((movedPiece.getColor() == Color.WHITE && target.getRow() == 0) || (movedPiece.getColor() == Color.BLACK && target.getRow() == 7)) {
-        promoted = (ChessPiece) board.getSquareFromPieces(target);
+        promoted = (ChessPiece) mainBoard.getSquareFromPieces(target);
         promoted = replacePromotedPiece("Q");
       }
     }
 
-    check = testCheck(opponent(currentPlayer)) ? true : false;
+    check = testCheck(opponent(currentPlayer));
     if (testCheckMate(opponent(currentPlayer))) {
       checkMate = true;
     }
@@ -112,51 +102,51 @@ public class ChessMatch {
       return promoted;
     }
     Position pos = promoted.getChessPosition().toPosition();
-    Piece p = board.removePiece(pos);
+    Piece p = mainBoard.removePiece(pos);
     piecesOnTheBoard.remove(p);
 
     ChessPiece newPiece = newPiece(type, promoted.getColor());
-    board.placePiece(newPiece, pos);
+    mainBoard.placePiece(newPiece, pos);
     piecesOnTheBoard.add(newPiece);
 
     return newPiece;
   }
 
   private ChessPiece newPiece(String type, Color color) {
-    if (type.equals("B")) return new Bishop(board, color);
-    if (type.equals("N")) return new Knight(board, color);
-    if (type.equals("R")) return new Rook(board, color);
-    return new Queen(board, color);
+    if (type.equals("B")) return new Bishop(mainBoard, color);
+    if (type.equals("N")) return new Knight(mainBoard, color);
+    if (type.equals("R")) return new Rook(mainBoard, color);
+    return new Queen(mainBoard, color);
   }
 
   private Piece makeMove(Position source, Position target) {
-    ChessPiece p = (ChessPiece)board.removePiece(source);
+    ChessPiece p = (ChessPiece) mainBoard.removePiece(source);
     p.increaseMoveCount();
-    Piece capturedPiece = board.removePiece(target);
-    board.placePiece(p, target);
+    Piece capturedPiece = mainBoard.removePiece(target);
+    mainBoard.placePiece(p, target);
     if (capturedPiece != null) {
       piecesOnTheBoard.remove(capturedPiece);
       capturedPieces.add(capturedPiece);
     }
 
-    // castling roque pequeno
+    // move castling roque pequeno
     if (p instanceof King && target.getColumn() == source.getColumn() + 2) {
       Position sourceRook = new Position(source.getRow(), source.getColumn() + 3);
       Position targetRook = new Position(source.getRow(), source.getColumn() + 1);
-      ChessPiece rook = (ChessPiece) board.removePiece(sourceRook);
-      board.placePiece(rook, targetRook);
+      ChessPiece rook = (ChessPiece) mainBoard.removePiece(sourceRook);
+      mainBoard.placePiece(rook, targetRook);
       rook.increaseMoveCount();
     }
-    // castling roque grande
+    // move castling roque grande
     if (p instanceof King && target.getColumn() == source.getColumn() - 2) {
       Position sourceRook = new Position(source.getRow(), source.getColumn() - 4);
       Position targetRook = new Position(source.getRow(), source.getColumn() - 1);
-      ChessPiece rook = (ChessPiece) board.removePiece(sourceRook);
-      board.placePiece(rook, targetRook);
+      ChessPiece rook = (ChessPiece) mainBoard.removePiece(sourceRook);
+      mainBoard.placePiece(rook, targetRook);
       rook.increaseMoveCount();
     }
 
-    // en passant
+    // move en passant
     if (p instanceof Pawn) {
       if (source.getColumn() != target.getColumn() && capturedPiece == null) {
         Position pawnPosition;
@@ -165,7 +155,7 @@ public class ChessMatch {
         } else {
           pawnPosition = new Position(target.getRow() - 1, target.getColumn());
         }
-        capturedPiece = board.removePiece(pawnPosition);
+        capturedPiece = mainBoard.removePiece(pawnPosition);
         capturedPieces.add(capturedPiece);
         piecesOnTheBoard.remove(capturedPiece);
       }
@@ -175,61 +165,61 @@ public class ChessMatch {
   }
 
   private void undoMove(Position source, Position target, Piece capturedPiece) {
-    ChessPiece p = (ChessPiece)board.removePiece(target);
+    ChessPiece p = (ChessPiece) mainBoard.removePiece(target);
     p.decreaseMoveCount();
-    board.placePiece(p, source);
+    mainBoard.placePiece(p, source);
     if (capturedPiece != null) {
-      board.placePiece(capturedPiece, target);
+      mainBoard.placePiece(capturedPiece, target);
       capturedPieces.remove(capturedPiece);
       piecesOnTheBoard.add(capturedPiece);
     }
 
-    // castling roque pequeno
+    // move castling roque pequeno
     if (p instanceof King && target.getColumn() == source.getColumn() + 2) {
       Position sourceRook = new Position(source.getRow(), source.getColumn() + 3);
       Position targetRook = new Position(source.getRow(), source.getColumn() + 1);
-      ChessPiece rook = (ChessPiece) board.removePiece(targetRook);
-      board.placePiece(rook, sourceRook);
+      ChessPiece rook = (ChessPiece) mainBoard.removePiece(targetRook);
+      mainBoard.placePiece(rook, sourceRook);
       rook.decreaseMoveCount();
     }
-    // castling roque grande
+    // move castling roque grande
     if (p instanceof King && target.getColumn() == source.getColumn() - 2) {
       Position sourceRook = new Position(source.getRow(), source.getColumn() - 4);
       Position targetRook = new Position(source.getRow(), source.getColumn() - 1);
-      ChessPiece rook = (ChessPiece) board.removePiece(targetRook);
-      board.placePiece(rook, sourceRook);
+      ChessPiece rook = (ChessPiece) mainBoard.removePiece(targetRook);
+      mainBoard.placePiece(rook, sourceRook);
       rook.decreaseMoveCount();
     }
 
-    // en passant
+    // move en passant
     if (p instanceof Pawn) {
       if (source.getColumn() != target.getColumn() && capturedPiece == enPassantVulnerable) {
-        ChessPiece pawn = (ChessPiece) board.removePiece(target);
+        ChessPiece pawn = (ChessPiece) mainBoard.removePiece(target);
         Position pawnPosition;
         if (p.getColor() == Color.WHITE) {
           pawnPosition = new Position(3, target.getColumn());
         } else {
           pawnPosition = new Position(4, target.getColumn());
         }
-        board.placePiece(pawn, pawnPosition);
+        mainBoard.placePiece(pawn, pawnPosition);
       }
     }
   }
 
   private void validateSourcePosition(Position position) {
-    if (!board.thereIsAPiece(position)) {
+    if (!mainBoard.thereIsAPiece(position)) {
       throw new ChessException("ChessMatch: There is no piece on source position");
     }
-    if (currentPlayer != ((ChessPiece) board.getSquareFromPieces(position)).getColor()) {
+    if (currentPlayer != ((ChessPiece) mainBoard.getSquareFromPieces(position)).getColor()) {
       throw new ChessException("ChessMatch: The chosen piece is not yours");
     }
-    if (!board.getSquareFromPieces(position).isThereAnyPossibleMove()) {
+    if (!mainBoard.getSquareFromPieces(position).isThereAnyPossibleMove()) {
       throw new ChessException("ChessMatch: There is no possible moves for the chosen piece");
     }
   }
 
   private void validadeTargetPosition(Position source, Position target) {
-    if (!board.getSquareFromPieces(source).isPossibleMove(target)) {
+    if (!mainBoard.getSquareFromPieces(source).isPossibleMove(target)) {
       throw new ChessException("ChessMatch: The chosen piece can't move to target position");
     }
   }
@@ -244,7 +234,7 @@ public class ChessMatch {
   }
 
   private ChessPiece king(Color color) {
-    List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece) x).getColor() == color).collect(Collectors.toList());
+    List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece) x).getColor() == color).toList();
     for (Piece p : list) {
       if (p instanceof King) {
         return (ChessPiece) p;
@@ -255,7 +245,7 @@ public class ChessMatch {
 
   private boolean testCheck(Color color) {
     Position kingPosition = king(color).getChessPosition().toPosition();
-    List<Piece> opponentPieces = piecesOnTheBoard.stream().filter(x -> ((ChessPiece) x).getColor() == opponent(color)).collect(Collectors.toList());
+    List<Piece> opponentPieces = piecesOnTheBoard.stream().filter(x -> ((ChessPiece) x).getColor() == opponent(color)).toList();
     for (Piece p : opponentPieces) {
       boolean[][] mat = p.possibleMoves();
       if (mat[kingPosition.getRow()][kingPosition.getColumn()]) {
@@ -269,11 +259,11 @@ public class ChessMatch {
     if (!testCheck(color) ) {
       return false;
     }
-    List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece) x).getColor() == color).collect(Collectors.toList());
+    List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece) x).getColor() == color).toList();
     for (Piece p : list) {
       boolean[][] mat = p.possibleMoves();
-      for (int i = 0; i < board.getRows(); i++) {
-        for (int j = 0; j < board.getColumns(); j++) {
+      for (int i = 0; i < mainBoard.getRows(); i++) {
+        for (int j = 0; j < mainBoard.getColumns(); j++) {
           if (mat[i][j]) {
             Position source = ((ChessPiece) p).getChessPosition().toPosition();
             Position target = new Position(i, j);
@@ -292,44 +282,44 @@ public class ChessMatch {
 
   private void placeNewPiece(char column, int row, ChessPiece piece) {
     Position cp = new ChessPosition(column, row).toPosition();
-    board.placePiece(piece, cp);
+    mainBoard.placePiece(piece, cp);
     piecesOnTheBoard.add(piece);
   }
 
   private void initialSetup() {
-    placeNewPiece('a', 1, new Rook(board, Color.WHITE));
-    placeNewPiece('b', 1, new Knight(board, Color.WHITE));
-    placeNewPiece('c', 1, new Bishop(board, Color.WHITE));
-    placeNewPiece('d', 1, new Queen(board, Color.WHITE));
-    placeNewPiece('e', 1, new King(board, Color.WHITE, this));
-    placeNewPiece('f', 1, new Bishop(board, Color.WHITE));
-    placeNewPiece('g', 1, new Knight(board, Color.WHITE));
-    placeNewPiece('h', 1, new Rook(board, Color.WHITE));
-    placeNewPiece('a', 2, new Pawn(board, Color.WHITE, this));
-    placeNewPiece('b', 2, new Pawn(board, Color.WHITE, this));
-    placeNewPiece('c', 2, new Pawn(board, Color.WHITE, this));
-    placeNewPiece('d', 2, new Pawn(board, Color.WHITE, this));
-    placeNewPiece('e', 2, new Pawn(board, Color.WHITE, this));
-    placeNewPiece('f', 2, new Pawn(board, Color.WHITE, this));
-    placeNewPiece('g', 2, new Pawn(board, Color.WHITE, this));
-    placeNewPiece('h', 2, new Pawn(board, Color.WHITE, this));
+    placeNewPiece('a', 1, new Rook(mainBoard, Color.WHITE));
+    placeNewPiece('b', 1, new Knight(mainBoard, Color.WHITE));
+    placeNewPiece('c', 1, new Bishop(mainBoard, Color.WHITE));
+    placeNewPiece('d', 1, new Queen(mainBoard, Color.WHITE));
+    placeNewPiece('e', 1, new King(mainBoard, Color.WHITE, this));
+    placeNewPiece('f', 1, new Bishop(mainBoard, Color.WHITE));
+    placeNewPiece('g', 1, new Knight(mainBoard, Color.WHITE));
+    placeNewPiece('h', 1, new Rook(mainBoard, Color.WHITE));
+    placeNewPiece('a', 2, new Pawn(mainBoard, Color.WHITE, this));
+    placeNewPiece('b', 2, new Pawn(mainBoard, Color.WHITE, this));
+    placeNewPiece('c', 2, new Pawn(mainBoard, Color.WHITE, this));
+    placeNewPiece('d', 2, new Pawn(mainBoard, Color.WHITE, this));
+    placeNewPiece('e', 2, new Pawn(mainBoard, Color.WHITE, this));
+    placeNewPiece('f', 2, new Pawn(mainBoard, Color.WHITE, this));
+    placeNewPiece('g', 2, new Pawn(mainBoard, Color.WHITE, this));
+    placeNewPiece('h', 2, new Pawn(mainBoard, Color.WHITE, this));
 
-    placeNewPiece('a', 8, new Rook(board, Color.BLACK));
-    placeNewPiece('b', 8, new Knight(board, Color.BLACK));
-    placeNewPiece('c', 8, new Bishop(board, Color.BLACK));
-    placeNewPiece('d', 8, new Queen(board, Color.BLACK));
-    placeNewPiece('e', 8, new King(board, Color.BLACK, this));
-    placeNewPiece('f', 8, new Bishop(board, Color.BLACK));
-    placeNewPiece('g', 8, new Knight(board, Color.BLACK));
-    placeNewPiece('h', 8, new Rook(board, Color.BLACK));
-    placeNewPiece('a', 7, new Pawn(board, Color.BLACK, this));
-    placeNewPiece('b', 7, new Pawn(board, Color.BLACK, this));
-    placeNewPiece('c', 7, new Pawn(board, Color.BLACK, this));
-    placeNewPiece('d', 7, new Pawn(board, Color.BLACK, this));
-    placeNewPiece('e', 7, new Pawn(board, Color.BLACK, this));
-    placeNewPiece('f', 7, new Pawn(board, Color.BLACK, this));
-    placeNewPiece('g', 7, new Pawn(board, Color.BLACK, this));
-    placeNewPiece('h', 7, new Pawn(board, Color.BLACK, this));
+    placeNewPiece('a', 8, new Rook(mainBoard, Color.BLACK));
+    placeNewPiece('b', 8, new Knight(mainBoard, Color.BLACK));
+    placeNewPiece('c', 8, new Bishop(mainBoard, Color.BLACK));
+    placeNewPiece('d', 8, new Queen(mainBoard, Color.BLACK));
+    placeNewPiece('e', 8, new King(mainBoard, Color.BLACK, this));
+    placeNewPiece('f', 8, new Bishop(mainBoard, Color.BLACK));
+    placeNewPiece('g', 8, new Knight(mainBoard, Color.BLACK));
+    placeNewPiece('h', 8, new Rook(mainBoard, Color.BLACK));
+    placeNewPiece('a', 7, new Pawn(mainBoard, Color.BLACK, this));
+    placeNewPiece('b', 7, new Pawn(mainBoard, Color.BLACK, this));
+    placeNewPiece('c', 7, new Pawn(mainBoard, Color.BLACK, this));
+    placeNewPiece('d', 7, new Pawn(mainBoard, Color.BLACK, this));
+    placeNewPiece('e', 7, new Pawn(mainBoard, Color.BLACK, this));
+    placeNewPiece('f', 7, new Pawn(mainBoard, Color.BLACK, this));
+    placeNewPiece('g', 7, new Pawn(mainBoard, Color.BLACK, this));
+    placeNewPiece('h', 7, new Pawn(mainBoard, Color.BLACK, this));
   }
 
 }
